--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("styles/header.css");
-:root
-{
+:root {
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
 }
 
 body {
@@ -10,14 +10,4 @@ body {
 
 h1 {
     background-color: white;
-}
-
-.cabeçalho__menu-hamburguer
-{
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    background-image: url("../img/Menu.svg");
-    background-repeat: no-repeat;
-    background-position: center;
 }
