--- a/styles/header.css
+++ b/styles/header.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container 
@@ -28,3 +29,13 @@
     padding: 1em;
 }
 
+.lista-menu
+{
+    display: none;
+    position: 100%;
+}
+
+.container__botao:checked~.lista-menu
+{
+    display: block;
+}
