--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 @import url("styles/header.css");
 
-:root {
+:root
+{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
 }
 
-body {
+body
+{
     background-color: var(--cor-de-fundo);
 }
 
-h1 {
+h1 
+{
     background-color: white;
 }
 
