--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,6 @@
 
-.cabeçalho__menu-hamburguer {
+.cabeçalho__menu-hamburguer 
+{
     width: 24px;
     height: 24px;
     display: inline-block;
@@ -8,7 +9,8 @@
     background-position: center;
 }
 
-.cabeçalho {
+.cabeçalho 
+{
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
@@ -16,18 +18,24 @@
     position: relative;
 }
 
-.container {
+.container 
+{
     display: flex;
     align-items: center;
 }
-.container__imagem {
+
+.container__imagem 
+{
     padding: 1em;
 }
-.lista-menu {
+
+.lista-menu 
+{
     display: none;
     position: absolute;
     top: 100%; 
 }
+
 .container__botao:checked ~ .lista-menu {
     display: block;
 }
