--- a/styles/header.css
+++ b/styles/header.css
@@ -40,4 +40,9 @@
     display: block;
 }
 
-    
+.lista-menu__titulo,
+.lista-menu__item
+{
+  padding: 1em;
+  background-color: var(--branco);
+}
