--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
     --fonte-principal: "Poppins";
 }
 
-body
-{
+body {
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 h1 
