--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
     --fonte-principal: "Poppins";
 }
 
-body {
+body 
+{
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     font-size: 16px;
