--- a/styles/banner.css
+++ b/styles/banner.css
@@ -27,3 +27,12 @@
     padding: 1em;
     width: 100%;
   }
+
+  .banner__pesquisa::placeholder 
+  {
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--branco);
+  }
