--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -14,7 +14,7 @@
     width: 100%;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.swiper-button-prevv,
+.swiper-button-nextt {
     display: none;
 }
