--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -21,5 +21,12 @@
 
 .swiper-pagination
 {
-    
+    position: initial;
+    margin: .5em 0;
+}
+
+.card__descrição
+{
+    display: flex;
+    justify-content: space-between;
 }
