--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -30,3 +30,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.card__botões
+{
+    display: flex;
+    justify-content: space-between;
+}
