--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -1,4 +1,5 @@
-.carrossel__titulo {
+.carrosel__titulo
+{
     color: var(--laranja);
     background-color: var(--branco);
     text-align: center;
@@ -8,71 +9,78 @@
     padding: 1em 0 0.5em 0;
 }
 
-.swiper-slide img {
+.swiper-slide img
+{
     width: 100%;
 }
 
-
-.swiper-button-prev,
-.swiper-button-next {
+.swiper-button-prevv,
+.swiper-button-nextt {
     display: none;
 }
 
-
-.swiper-pagination {
+.swiper-pagination
+{
     position: initial;
     margin: .5em 0;
 }
 
-.card {
+.card__descrição
+{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.card__botões
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+.botões
+{
+    display: flex;
+}
+
+.card
+{
     background: var(--branco);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
     padding: 1em;
 }
 
-.card__descrição {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.5em;
-
-}
-
-.card__botões {
-    display: flex;
-    justify-content: space-between;
-}
-
-.botões {
-    display: flex;
-}
-
-
-.descrição__titulo {
+.descrição_titulo
+{
     color: var(--laranja);
     font-weight: 700;
 }
 
-.descrição__titulo-livro {
+.descrição_titulo-livro
+{
     color: var(--azul);
     font-size: 18px;
     font-weight: 700;
     margin: 0.5em 0;
 }
 
-.descrição__texto {
+.descrição__texto
+{
     font-size: 14px;
 }
 
-.botões__ancora {
+.botões__item
+{
+    margin: 0 0.5em;
+}
+
+.botões__ancora
+{
     background-color: var(--laranja);
     padding: 1em 2.2em;
     color: var(--branco);
     font-weight: 700;
     text-decoration: none;
-}
-
-.botões__item {
-    margin: 0 0.5em;
 }
