--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,6 @@
-.cabeçalho__menu-hamburguer {
+
+.cabeçalho__menu-hamburguer 
+{
     width: 24px;
     height: 24px;
     display: inline-block;
@@ -7,7 +9,8 @@
     background-position: center;
 }
 
-.cabeçalho {
+.cabeçalho 
+{
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
@@ -15,20 +18,22 @@
     position: relative;
 }
 
-.container {
+.container 
+{
     display: flex;
     align-items: center;
 }
 
-.container__imagem {
+.container__imagem 
+{
     padding: 1em;
 }
 
-.lista-menu {
+.lista-menu 
+{
     display: none;
     position: absolute;
-    top: 100%;
-    width: 60vw;
+    top: 100%; 
 }
 
 .container__botao:checked ~ .lista-menu {
@@ -36,24 +41,14 @@
 }
 
 .lista-menu__titulo,
-.lista-menu__item {
-    padding: 1em;
-    background-color: var(--branco);
+.lista-menu__item
+{
+  padding: 1em;
+  background-color: var(--branco);
+  color: var(--laranja);
 }
 
-.lista-menu__titulo {
-    color: var(--laranja);
-    font-weight: 700;
-}
-
-.lista-menu__link {
-    background: var(--azul-degrade);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-transform: uppercase;
-}
-
-.container__botao {
-    display: none;
+.container__botao
+ {
+  display: none;
 }
